objects/Contact.object
<CustomObject><fields>
<fields>
        <fullName>hed__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__Naming_Exclusions__c</fullName>
        <inlineHelpText>Determines which household names this contact is NOT included as part of.</inlineHelpText>
        <label>Naming Exclusions</label>
        <picklist>
            <picklistValues>
                <fullName>Household__c.Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Formal_Greeting__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household__c.Informal_Greeting__c</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>hed__Military_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military Service</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Military_Background__c</fullName>
        <label>Military Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>hed__HIPAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HIPAA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__HIPAA_Detail__c</fullName>
        <label>HIPAA Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>hed__Citizenship__c</fullName>
        <label>Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas (the)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia (Plurinational State of)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>hed__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>hed__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Contact's Current address overrides any new or seasonal address. (Applies to Household Contacts only.)</description>
        <inlineHelpText>If checked, the Contact's Current Address lookup overrides the Household's default Address or seasonal Address.</inlineHelpText>
        <label>Do Not Automatically Update</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>if(
  ISPICKVAL(hed__Primary_Address_Type__c,"Work"),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; ", " , "" ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; ", " , "" )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; " " , "" )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,"") &amp; 
  If(LEN( MailingCountry ) &gt;0, ", " &amp;MailingCountry,"")
,
if(ISPICKVAL(hed__Secondary_Address_Type__c,"Work"),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; ", " , "" ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; ", " , "" )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; " " , "" )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,"") &amp; 
  If(LEN(OtherCountry ) &gt;0, ", " &amp; OtherCountry,"")
  ,"" 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>hed__UniversityEmail__c</fullName>
        <description>Official University email address.</description>
        <inlineHelpText>Official University email address.</inlineHelpText>
        <label>University Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>hed__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields><compactLayoutAssignment>hed__HEDA_Contact_Compact_Layout</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CWID__c</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS1_STREET</columns>
        <columns>AcademicSuccessCoach__c</columns>
        <columns>Academic_Success_Coach__c</columns>
        <columns>Major__c</columns>
        <columns>Add_Drop__c</columns>
        <columns>hed__WorkPhone__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>Greek_Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews><listViews>
        <fullName>All_Athlete_Add_Drop</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CWID__c</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS1_STREET</columns>
        <columns>AcademicSuccessCoach__c</columns>
        <columns>Academic_Success_Coach__c</columns>
        <columns>Major__c</columns>
        <columns>Add_Drop__c</columns>
        <columns>hed__WorkPhone__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.PHONE4</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Add_Drop__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Athlete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Athlete Add/Drop</label>
    </listViews><listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><validationRules>
        <fullName>Contact_Name_is_non_editable</fullName>
        <active>true</active>
        <description>This validation rule is implemented as part of DFCT0010993</description>
        <errorConditionFormula>( $Profile.Name &lt;&gt; 'System Administrator' &amp;&amp; (ISCHANGED(FirstName) || ISCHANGED( LastName)))</errorConditionFormula>
        <errorMessage>Contact Name is not editable</errorMessage>
    </validationRules></CustomObject>